--- a/ChestXRay.ipynb
+++ b/ChestXRay.ipynb
@@ -6854,9 +6854,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DGy1-4sl1dQz",
-        "outputId": "ecd1a1c9-636b-4988-bfe1-2f3cd2c02be5"
+        "outputId": "70dd4d56-4eea-47b7-c89d-642c268a4ed5"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -6870,7 +6870,8 @@
             "Epoch 6/10 - Loss: 0.0650 | Acc: 0.9770\n",
             "Epoch 7/10 - Loss: 0.0781 | Acc: 0.9697\n",
             "Epoch 8/10 - Loss: 0.0677 | Acc: 0.9745\n",
-            "Epoch 9/10 - Loss: 0.0536 | Acc: 0.9789\n"
+            "Epoch 9/10 - Loss: 0.0536 | Acc: 0.9789\n",
+            "Epoch 10/10 - Loss: 0.0559 | Acc: 0.9795\n"
           ]
         }
       ]
@@ -6892,7 +6893,7 @@
       "metadata": {
         "id": "bniaVY2s1hfv"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -6923,10 +6924,22 @@
         "print(\"✅ ViT Test Accuracy:\", round(test_acc * 100, 2), \"%\")\n"
       ],
       "metadata": {
-        "id": "fwHJc71A1t1e"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fwHJc71A1t1e",
+        "outputId": "2d8061f2-626a-4209-c08d-d4d11beda06d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ ViT Test Accuracy: 83.33 %\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -6944,10 +6957,80 @@
         "files.download(\"vit_base_chestxray.pth\")\n"
       ],
       "metadata": {
-        "id": "y7tSNRYL1pwP"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "id": "y7tSNRYL1pwP",
+        "outputId": "25b7a3a9-0684-4f98-cd8c-e5cd0d56e96c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_df587fb1-8bb6-4a6c-8a07-2fcc1c36a436\", \"vit_base_chestxray.pth\", 343261110)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
